# zcash-vote-audit

src-tauri/: Cargo.toml  download.sh
src-tauri/data/1d075a9b9e0b53072efebff331722d99a74bc7f21b6d26f0600d47d377a67e2b/: ballot_1.json  ballot_10.json  ballot_11.json  ballot_12.json  ballot_13.json  ballot_14.json  ballot_15.json  ballot_16.json  ballot_17.json  ballot_18.json  ballot_19.json  ballot_2.json  ballot_20.json  ballot_21.json  ballot_22.json  ballot_23.json  ballot_24.json  ballot_25.json  ballot_26.json  ballot_27.json  ballot_28.json  ballot_29.json  ballot_3.json  ballot_30.json  ballot_31.json  ballot_32.json  ballot_33.json  ballot_34.json  ballot_35.json  ballot_36.json  ballot_37.json  ballot_38.json  ballot_39.json  ballot_4.json  ballot_40.json  ballot_41.json  ballot_42.json  ballot_43.json  ballot_44.json  ballot_45.json  (+32 more)
src-tauri/data/340534dc1a42a2faef9fe57ecff609526d8433e5e9a9f6feac6d09fe1f0d5d2d/: ballot_1.json  ballot_10.json  ballot_100.json  ballot_101.json  ballot_102.json  ballot_103.json  ballot_104.json  ballot_105.json  ballot_106.json  ballot_107.json  ballot_108.json  ballot_109.json  ballot_11.json  ballot_110.json  ballot_111.json  ballot_112.json  ballot_113.json  ballot_114.json  ballot_115.json  ballot_116.json  ballot_117.json  ballot_118.json  ballot_119.json  ballot_12.json  ballot_120.json  ballot_121.json  ballot_122.json  ballot_123.json  ballot_124.json  ballot_125.json  ballot_126.json  ballot_127.json  ballot_128.json  ballot_129.json  ballot_13.json  (+177 more)
src-tauri/results/: output.txt
src-tauri/src/: lib.rs  main.rs
(+936 files in other folders)
