[package]
name = "zcash-vote-audit"
version = "0.1.0"
description = "Audit a zcash election"
authors = ["hanh425@gmail.com"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bip0039 = "0.9.0"
reqwest = { version = "0.11.27", features = ["json"] }
pasta_curves = "0.5.1"

zcash-vote = {git = "https://github.com/hhanh00/zcash-vote.git", rev="8b42736"}
orchard = "0.3.0"

[patch.crates-io]
orchard = {git = "https://github.com/hhanh00/orchard.git", rev="a2ec07c"}
halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }

[patch."https://github.com/hhanh00/zcash-vote.git"]
#zcash-vote = {path = "../../zwallet/native/zcash-vote"}

[profile.dev]
opt-level = 3
debug = true
